Add range year in filter and icons of identifications

--- a/src/components/antd/ListItem/styles.css
+++ b/src/components/antd/ListItem/styles.css
@@ -1,3 +1,16 @@
 .list-item {
     margin-top: 10px !important;
 }
+
+/* Bottom right text */
+.bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+  }
+
+  /* Container holding the image and the text */
+.container {
+    position: relative;
+    text-align: center;
+  }
