--- a/src/components/antd/ListItem/styles.css
+++ b/src/components/antd/ListItem/styles.css
@@ -4,13 +4,21 @@
 
 /* Bottom right text */
 .bottom-right {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-  }
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
 
-  /* Container holding the image and the text */
+/* Container holding the image and the text */
 .container {
-    position: relative;
-    text-align: center;
-  }
+  position: relative;
+  text-align: center;
+}
+
+.image-adult {
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+}
